--- a/.github/workflows/main_capstoneg13frontend.yml
+++ b/.github/workflows/main_capstoneg13frontend.yml
@@ -17,13 +17,23 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
-          node-version: '18.x'
+          node-version: '18.x' # Use the latest LTS version of Node.js
 
-      - name: npm install, build, and test
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm # Cache npm modules to speed up builds
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build and test
         run: |
-          npm install
           npm run build --if-present
           npm run test --if-present
 
@@ -47,7 +57,6 @@ jobs:
           name: node-app
 
       - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'capstoneg13frontend'
